--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
+    "@vue/test-utils": "^2.4.6",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -31,6 +32,7 @@
     "unplugin-vue-router": "^0.10.0",
     "vite": "^5.3.3",
     "vite-plugin-vuetify": "^2.0.3",
+    "vitest": "^2.1.4",
     "vue-router": "^4.4.0"
   }
 }
